# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
gendiff/: __init__.py  cli.py  compose_diff_list.py  convert_files_to_dict.py  deserialize.py  gendiff.py  generate_difference.py  parsers.py  read_data.py  utilities.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  hexlet_code.py
tests/: TEMP.py  test_gendiff.py
